# sigma-convert

./: .gitignore  Cargo.toml  README.md  compile_all.sh  example_mappings.txt
sigmac-api-server/: Cargo.toml  ReadMe.md
sigmac-api-server/configs/: config.sample.yml  nginx.vhost  sigmac_api.service
sigmac-api-server/src/: error.rs  lib.rs  main.rs  utils.rs
sigmac-api-server/src/controllers/: converter.rs  mod.rs
sigmac-api-server/src/secure/: cert.rs
sigmac-api-server/src/secure/guards/: mod.rs
sigmac-api-server/src/server/: catchers.rs  config.rs  mod.rs
sigmac-cli/: Cargo.toml
sigmac-cli/src/: error.rs  main.rs
sigmac-lib/: Cargo.toml
sigmac-lib/src/: error.rs  lib.rs  prelude.rs  utils.rs
sigmac-lib/src/backend/: arcsight.rs  aws_opensearch.rs  chronicle.rs  devo.rs  dnif.rs  elastalert.rs  graylog.rs  humio_alert.rs  kafka_sql.rs  kibana.rs  logrhythm.rs  mod.rs  qradar.rs  securonix.rs  sentinel.rs  snowflake.rs  splunk.rs  sql.rs  sqlite.rs  sumologic.rs
sigmac-lib/src/sigma/: mod.rs
sigmac-lib/src/sigma/components/: command.rs  command_types.rs  enrichment.rs  parsing.rs
sigmac-lib/src/sigma/components/rule/: mod.rs  sigma.rs
sigmac-lib/src/sigma/events/: base_schema.rs  field_dictionary.rs  tags.rs
sigmac-lib/src/sigma/logging/: mod.rs
sigmac-lib/src/sigma/testing/: mod.rs
sigmac_frontend/: Cargo.toml  ReadMe.md  index.html  tailwind.config.js
sigmac_frontend/src/: error.rs  main.rs  models.rs  service.rs
sigmac_frontend/src/components/: about.rs  footer.rs  mod.rs  navbar.rs
sigmac_frontend/src/components/rules_input/: etxra_input_fields.rs  mod.rs
sigmac_frontend/src/components/rules_output/: mod.rs  rule_output_item.rs
