[package]
name = "sigmac_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
yew = {version="0.20.0", features = ["csr"]}
base64 = "0.21.2"
gloo = "0.8"
gloo-net = {version= "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
wasm-bindgen-futures = "0.4"
thiserror = "1.0.44"
material-yew = {version="0.3.0", features = ["full"]}


[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
